# calc

./: .gitignore  AbstractCalculator.h  CMakeLists.txt  Calculator.cpp  Calculator.h  LimitedCalculator.cpp  LimitedCalculator.h  README.md
.github/workflows/: codex-auto-review.yml
mfc/: CalcMFC.sln
mfc/CalcMFC/: App.cpp  App.h  CalcMFC.vcxproj  CalcMFC.vcxproj.filters  MainFrame.cpp  MainFrame.h
tests/: CalculatorTests.cpp
